--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+package-lock.json
 
 node_modules
 dist
@@ -24,3 +25,4 @@ dist-ssr
 *.sw?
 .env
 src/Test.jsx
+package-lock.json
