--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "antd": "^5.16.5",
     "axios": "^1.6.8",
     "braintree-web-drop-in-react": "^1.2.1",
