--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.16.5",
     "axios": "^1.6.8",
     "braintree-web-drop-in-react": "^1.2.1",
+    "cssnano": "^7.0.3",
     "dotenv": "^16.4.5",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
