--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "react-router-dom": "^6.23.0",
     "tailwindcss": "^3.4.15",
     "vite": "^5.2.0"
