--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
